--- a/app/src/main/res/layout/layout_visitor_statistics_pop.xml
+++ b/app/src/main/res/layout/layout_visitor_statistics_pop.xml
@@ -1,105 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/y280"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/visitor_title"
-        android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="@dimen/y280"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/y24"
-        android:layout_marginTop="@dimen/y24"
-        android:text="语言包:客流分析"
-        android:textColor="@color/color_33333"
-        android:textSize="@dimen/sp17"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/color_white">
 
-    <TextView
-        android:id="@+id/visitor_today"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/y24"
-        android:layout_marginTop="@dimen/y22"
-        android:text="语言包:今日来访"
-        android:textColor="@color/color_33333"
-        android:textSize="@dimen/sp15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/visitor_title" />
+        <TextView
+            android:id="@+id/visitor_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/y24"
+            android:layout_marginTop="@dimen/y24"
+            android:text="@string/MESSAGES_FACE_ANALYSIS"
+            android:textColor="@color/color_33333"
+            android:textSize="@dimen/sp17"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/visitor_today_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="AAA"
-        android:textSize="@dimen/sp17"
-        android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/visitor_today"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+            android:id="@+id/visitor_today"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/y20"
+            android:layout_marginStart="@dimen/y24"
+            android:layout_marginTop="@dimen/y22"
+            android:text="@string/MESSAGES_FACE_TADAY_VISIT"
+            android:textColor="@color/color_33333"
+            android:textSize="@dimen/sp15"
+            app:layout_constraintEnd_toStartOf="@+id/visitor_today_count"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/visitor_title" />
 
-    <TextView
-        android:id="@+id/visitor_yesterday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/y24"
-        android:layout_marginTop="@dimen/y18"
-        android:text="语言包:昨日来访"
-        android:textColor="@color/color_33333"
-        android:textSize="@dimen/sp15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/visitor_today" />
+        <TextView
+            android:id="@+id/visitor_today_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/y2"
+            android:textSize="@dimen/sp17"
+            android:textStyle="bold"
+            app:layout_constraintBaseline_toBaselineOf="@+id/visitor_today"
+            app:layout_constraintEnd_toStartOf="@+id/visitor_today_unit"
+            app:layout_constraintStart_toEndOf="@+id/visitor_today" />
 
-    <TextView
-        android:id="@+id/visitor_yesterday_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DDD"
-        android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/visitor_yesterday"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+            android:id="@+id/visitor_today_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/y24"
+            android:text="@string/MESSAGES_FACE_PEOPLE"
+            app:layout_constraintBaseline_toBaselineOf="@+id/visitor_today"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/visitor_newly_increased"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/y23"
-        android:layout_marginStart="@dimen/y24"
-        android:layout_marginTop="@dimen/y18"
-        android:text="语言包:新增来访"
-        android:textColor="@color/color_33333"
-        android:textSize="@dimen/sp15"
-        app:layout_constraintBottom_toTopOf="@+id/close"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/visitor_yesterday" />
+        <TextView
+            android:id="@+id/visitor_yesterday"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/y20"
+            android:layout_marginStart="@dimen/y24"
+            android:layout_marginTop="@dimen/y18"
+            android:text="@string/MESSAGES_FACE_YESTERDAY_VISIT"
+            android:textColor="@color/color_33333"
+            android:textSize="@dimen/sp15"
+            app:layout_constraintEnd_toStartOf="@+id/visitor_yesterday_count"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/visitor_today" />
 
-    <TextView
-        android:id="@+id/visitor_newly_increased_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="-444"
-        android:textColor="#459C17"
-        android:textSize="@dimen/sp17"
-        android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/visitor_newly_increased"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+            android:id="@+id/visitor_yesterday_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/y2"
+            android:textStyle="bold"
+            app:layout_constraintBaseline_toBaselineOf="@+id/visitor_yesterday"
+            app:layout_constraintEnd_toStartOf="@+id/visitor_yesterday_unit"
+            app:layout_constraintStart_toEndOf="@+id/visitor_yesterday" />
 
-    <TextView
-        android:id="@+id/close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/y8"
-        android:layout_marginEnd="@dimen/y8"
-        android:gravity="center"
-        android:paddingBottom="@dimen/y12"
-        android:paddingEnd="@dimen/y22"
-        android:paddingStart="@dimen/y22"
-        android:paddingTop="@dimen/y12"
-        android:text="@string/MAGNETISM_OFF"
-        android:textColor="@color/color_4b9fd5_selector"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+            android:id="@+id/visitor_yesterday_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/y24"
+            android:text="@string/MESSAGES_FACE_PEOPLE"
+            app:layout_constraintBaseline_toBaselineOf="@+id/visitor_yesterday"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/visitor_newly_increased"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/y23"
+            android:layout_marginEnd="@dimen/y20"
+            android:layout_marginStart="@dimen/y24"
+            android:layout_marginTop="@dimen/y18"
+            android:text="@string/MESSAGES_FACE_NEW_VISIT"
+            android:textColor="@color/color_33333"
+            android:textSize="@dimen/sp15"
+            app:layout_constraintBottom_toTopOf="@+id/close"
+            app:layout_constraintEnd_toStartOf="@+id/visitor_newly_increased_count"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/visitor_yesterday" />
+
+        <TextView
+            android:id="@+id/visitor_newly_increased_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/y2"
+            android:textColor="#459C17"
+            android:textSize="@dimen/sp17"
+            android:textStyle="bold"
+            app:layout_constraintBaseline_toBaselineOf="@+id/visitor_newly_increased"
+            app:layout_constraintEnd_toEndOf="@+id/visitor_newly_increased"
+            app:layout_constraintEnd_toStartOf="@+id/visitor_newly_increased_unit" />
+
+        <TextView
+            android:id="@+id/visitor_newly_increased_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/y24"
+            android:layout_marginStart="@dimen/y2"
+            android:text="@string/MESSAGES_FACE_PEOPLE"
+            app:layout_constraintBaseline_toBaselineOf="@+id/visitor_newly_increased_count"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/y8"
+            android:layout_marginEnd="@dimen/y8"
+            android:gravity="center"
+            android:paddingBottom="@dimen/y12"
+            android:paddingEnd="@dimen/y22"
+            android:paddingStart="@dimen/y22"
+            android:paddingTop="@dimen/y12"
+            android:text="@string/CLOSE_BUTTON"
+            android:textColor="@color/color_4b9fd5_selector"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+</FrameLayout>
