--- a/app/src/main/res/layout/layout_face_manager_pop_alert.xml
+++ b/app/src/main/res/layout/layout_face_manager_pop_alert.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/shadow">
+    android:layout_height="wrap_content">
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -23,7 +22,8 @@
             android:padding="@dimen/y12"
             android:text="@string/DELETE"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp16" />
+            android:textSize="@dimen/sp16"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/move_to"
@@ -35,4 +35,4 @@
             android:textSize="@dimen/sp16" />
 
     </LinearLayout>
-</FrameLayout>
+</android.support.v7.widget.CardView>
