--- a/app/src/main/res/layout/layout_face_page_pop_menu.xml
+++ b/app/src/main/res/layout/layout_face_page_pop_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/shadow">
+    android:layout_height="wrap_content">
+    <!--android:background="@drawable/shadow"-->
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
@@ -20,11 +20,12 @@
             android:id="@+id/delete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:padding="@dimen/y12"
+
             android:text="@string/DELETE"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp16" />
+            android:textSize="@dimen/sp16"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/detect"
@@ -45,4 +46,4 @@
             android:textSize="@dimen/sp16" />
 
     </LinearLayout>
-</FrameLayout>
+</android.support.v7.widget.CardView>
